# capstone2-awgn-simulator

./: .gitignore  README.md  pyproject.toml
src/awgn/: awgn.py
src/awgn_simulator/: __init__.py  awgn_simulator.py
