[project]
name = "capstone2-awgn-simulator"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jonghyeon Park", email = "belline0124@gmail.com" }
]
dependencies = [
    "numpy>=2.2.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"app" = "awgn_simulator:main"
"batch" = "awgn_simulator:batch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/awgn", "src/awgn_simulator"]
